fixing spelling mistake

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
         <div class="col-1-of-2">
           <p class="footer__copyright">
             Built by <a href="#" class="footer__link">Rinat amir</a> for her
-            portfolyo <a href="#" class="footer__link">Front-End Developer</a>.
+            portfolio website <a href="#" class="footer__link">Front-End Developer</a>.
             Copyright &copy;
           </p>
         </div>
@@ -487,41 +487,5 @@
         </div>
       </div>
     </div>
-
-    <!-- <section class="grid-test">
-
-      <div class="row">
-        <div class="col-1-of-2">col-1-of-2</div>
-        <div class="col-1-of-2">col-1-of-2</div>
-      </div>
-
-      <div class="row">
-        <div class="col-1-of-3">col-1-of-3</div>
-        <div class="col-1-of-3">col-1-of-3</div>
-        <div class="col-1-of-3">col-1-of-3</div>
-      </div>
-
-      <div class="row">
-        <div class="col-1-of-3">col-1-of-3</div>
-        <div class="col-2-of-3">col-2-of-3</div>
-      </div>
-
-      <div class="row">
-        <div class="col-1-of-4">col-1-of-4</div>
-        <div class="col-1-of-4">col-1-of-4</div>
-        <div class="col-1-of-4">col-1-of-4</div>
-        <div class="col-1-of-4">col-1-of-4</div>
-      </div>
-
-      <div class="row">
-        <div class="col-1-of-4">col-1-of-4</div>
-        <div class="col-1-of-4">col-1-of-4</div>
-        <div class="col-2-of-4">col-2-of-4</div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-4">col-1-of-4</div>
-        <div class="col-3-of-4">col-3-of-4</div>
-      </div>
-    </section> -->
   </body>
 </html>
